--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,11 +6,13 @@ on:
     paths:
       - "src/**"
       - "tests/**"
+      - ".github/workflows/*"
   pull_request:
     branches: [main]
     paths:
       - "src/**"
       - "tests/**"
+      - ".github/workflows/*"
 
 permissions:
   contents: read
